add Satisfaction percentage for consultant
