# staticfiles/swagger.json
@@ -404,6 +404,12 @@
                       },
                       "user_type": {
                         "type": "string"
+                      },
+                      "count_of_all_comments": {
+                        "type": "integer"
+                      },
+                      "satisfaction_percentage": {
+                        "type": "integer"
                       }
                     }
                   }
@@ -3049,7 +3055,7 @@
         }
       }
     },
-    "/consultant/comment/{ConsultatntId}": {
+    "/consultant/comment/{ConsultatntUsername}": {
       "get": {
         "tags": [
           "Comment"
@@ -3070,11 +3076,9 @@
         "parameters": [
           {
             "in": "path",
-            "name": "ConsultatntId",
+            "name": "ConsultatntUsername",
             "required": true,
-            "type": "integer",
-            "minimum": 1,
-            "description": "The deirect message ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -3115,6 +3119,12 @@
                 },
                 "user_comment": {
                   "type": "string"
+                },
+                "count_of_all_comments": {
+                  "type": "integer"
+                },
+                "satisfaction_percentage": {
+                  "type": "integer"
                 }
               }
             }
